unpackaged/main/default/objects/Monthly_Billing__c/Monthly_Billing__c.object-meta.xml
<CustomObject>
    <label>Monthly Billing</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>