unpackaged/main/default/objects/Monthly_Billing__c/fields/Actual_Overhours_to_Charge__c.field-meta.xml
<CustomField>
    <fullName>Actual_Overhours_to_Charge__c</fullName>
    <formula>if( Remaining_Overhours_to_be_Charged__c - Free_Hours_or_Credits__c &lt; 0, 0 , Remaining_Overhours_to_be_Charged__c - Free_Hours_or_Credits__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Overhours to Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>