unpackaged/main/default/objects/Monthly_Billing__c/fields/Actual_Overhours_to_Charge_Cash__c.field-meta.xml
<CustomField>
    <fullName>Actual_Overhours_to_Charge_Cash__c</fullName>
    <formula>Actual_Overhours_to_Charge__c * Overhours_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Overhours to Charge $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>