unpackaged/main/default/objects/Monthly_Billing__c/fields/Billable_Time_Logged_MTD_hours__c.field-meta.xml
<CustomField>
    <fullName>Billable_Time_Logged_MTD_hours__c</fullName>
    <label>Billable Time Logged MTD Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>