unpackaged/main/default/objects/Monthly_Billing__c/fields/Charged_Date__c.field-meta.xml
<CustomField>
    <fullName>Charged_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Charged Date</label>
    <type>Date</type>
</CustomField>