unpackaged/main/default/objects/Monthly_Billing__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Monthly Billings</relationshipLabel>
    <relationshipName>Monthly_Billings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>