unpackaged/main/default/objects/Monthly_Billing__c/fields/Date_Warned__c.field-meta.xml
<CustomField>
    <fullName>Date_Warned__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Warned</label>
    <type>Date</type>
</CustomField>