unpackaged/main/default/objects/Monthly_Billing__c/fields/Error_Notes_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Error_Notes_Outstanding__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Notes/Outstanding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>