unpackaged/main/default/objects/Monthly_Billing__c/fields/Free_Credit_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Credit_Notice_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Free Credit Notice Date</label>
    <type>Date</type>
</CustomField>