unpackaged/main/default/objects/Monthly_Billing__c/fields/Holding_Off__c.field-meta.xml
<CustomField>
    <fullName>Holding_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holding Off</label>
    <type>Checkbox</type>
</CustomField>