unpackaged/main/default/objects/Monthly_Billing__c/fields/Hours_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_Month__c</fullName>
    <label>Hours per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>