unpackaged/main/default/objects/Monthly_Billing__c/fields/Lindsi_Approved__c.field-meta.xml
<CustomField>
    <fullName>Lindsi_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lindsi Approved</label>
    <type>Checkbox</type>
</CustomField>