unpackaged/main/default/objects/Monthly_Billing__c/fields/Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Value__c</fullName>
    <formula>Retainer__c + Actual_Overhours_to_Charge_Cash__c + (Overhours_Charged_During_the_Month__c * Overhours_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>