unpackaged/main/default/objects/Monthly_Billing__c/fields/Not_Charged__c.field-meta.xml
<CustomField>
    <fullName>Not_Charged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Charged Overhours</label>
    <type>Checkbox</type>
</CustomField>