unpackaged/main/default/objects/Monthly_Billing__c/fields/Not_Warning__c.field-meta.xml
<CustomField>
    <fullName>Not_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Warning</label>
    <type>Checkbox</type>
</CustomField>