unpackaged/main/default/objects/Monthly_Billing__c/fields/Overhours_Notes__c.field-meta.xml
<CustomField>
    <fullName>Overhours_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Overhours Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>