unpackaged/main/default/objects/Monthly_Billing__c/fields/Remaining_Overhours_to_be_Charged__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Overhours_to_be_Charged__c</fullName>
    <formula>Time_Overhours_MTD__c - Overhours_Charged_During_the_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Overhours to be Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>