unpackaged/main/default/objects/Monthly_Billing__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team</label>
    <length>200</length>
    <type>Text</type>
</CustomField>