unpackaged/main/default/objects/Monthly_Billing__c/fields/Time_Overhours_MTD__c.field-meta.xml
<CustomField>
    <fullName>Time_Overhours_MTD__c</fullName>
    <formula>IF(Billable_Time_Logged_MTD_hours__c - Hours_per_Month__c&gt;0,Billable_Time_Logged_MTD_hours__c - Hours_per_Month__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Overhours MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>