unpackaged/main/default/objects/Monthly_Billing__c/fields/Total_Overhour_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Overhour_Charge__c</fullName>
    <formula>Time_Overhours_MTD__c * Overhours_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Overhour Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>