unpackaged/main/default/objects/Monthly_Billing__c/fields/Value_per_Utilized_Hour__c.field-meta.xml
<CustomField>
    <fullName>Value_per_Utilized_Hour__c</fullName>
    <formula>Monthly_Value__c / Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value per Utilized Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>