unpackaged/main/default/objects/Monthly_Billing__c/fields/Warning_Given_By__c.field-meta.xml
<CustomField>
    <fullName>Warning_Given_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warning Given By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Monthly_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>