unpackaged/main/default/objects/Monthly_Billing__c/listViews/Last_Month.listView-meta.xml
<ListView>
    <fullName>Last_Month</fullName>
    <columns>Retainer__c</columns>
    <columns>Client_Account__c</columns>
    <columns>Hours_per_Month__c</columns>
    <columns>Billable_Time_Logged_MTD_hours__c</columns>
    <columns>Time_Overhours_MTD__c</columns>
    <columns>Overhours_Rate__c</columns>
    <columns>Actual_Overhours_to_Charge_Cash__c</columns>
    <columns>Notes__c</columns>
    <columns>NAME</columns>
    <columns>Date_Warned__c</columns>
    <columns>Warning_Given_By__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Holding_Off__c</columns>
    <columns>Not_Warning__c</columns>
    <columns>Free_Hours_or_Credits__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>March 2024</value>
    </filters>
    <label>Last Month</label>
</ListView>