unpackaged/main/default/objects/Monthly_Billing__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>Client_Account__c</columns>
    <columns>Hours_per_Month__c</columns>
    <columns>Billable_Time_Logged_MTD_hours__c</columns>
    <columns>Time_Overhours_MTD__c</columns>
    <columns>Overhours_Rate__c</columns>
    <columns>Total_Overhour_Charge__c</columns>
    <columns>Actual_Overhours_to_Charge_Cash__c</columns>
    <columns>Lindsi_Approved__c</columns>
    <columns>Charged_Date__c</columns>
    <columns>Notes__c</columns>
    <columns>Retainer__c</columns>
    <columns>Error_Notes_Outstanding__c</columns>
    <columns>Date_Warned__c</columns>
    <columns>Warning_Given_By__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month</label>
</ListView>